3.2 --	2014-04-09
	* netaudit:
	Added 'timeout' parameter
	Removed snmp cleanup after snmp failure

3.1.1 -- 2013-02-21
	* netreport --diff:
	Fixed searching for a partial specified hostname
	Fixed error output when run is not found in
	Added error output if there is no last two runs for a hostname
	* netreport --full:
	Added partital hostname heuretics from --diff
	* netreport --list:
	Fixed problem when no argument to --list is given

3.1 -- 2013-02-17
	'--diff' mode is default in netreport. If no hostname is given
	on command-line run diff over the hosts in both last 2 runs. If
	a hostname IS given, run diff over last 2 runs with data for the
	hostname.

3.0.3 -- 2013-02-09
	Fixed problem logging an undefined sysDescr

3.0.2 -- 2013-01-08
	Fixed Prompt-problem on ASR9k
	Fixed error message output on failed login
	Added debug logging of sysDescr and Plugin used

3.0.1 -- 2013-01-08
	Updated Changelog
	Updated info on new netaudit.conf parameters (logging)

3.0 -- 2013-01-08
	Moved away from Mouse to Mojo
	The SQL schema is now included in the database module (DATA section)
	Added logging to file
	Fixed 'netaudit --diff hostname'

2.2 -- 2012-12-03
	* lib/Netaudit/Constants:
	Added Pronea style of hostnames

2.1 -- 2012-09-20
	* bin/netaudit:
	Moved config file code to new module Netaudit::Config
	
	* lib/Netaudit/Config:
	The config file is now searched for in several places

	* bin/netreport:
	Common config file with bin/netaudit
	Changed command arguments:
	- database is removed
	- compare|c is renamed to diff|d
	- configfile|c is added

	* share/schema.sql, lib/Netaudit/Db:
	Bump schema version to 2

	* share/upgrade1.x-2.1:
	Renamed from share/upgrade10-20
	Added check of database version before upgrade
	Added upgrade of schema version


2.0.2 -- 2012-09-18
	* lib/Netaudit/SNMP, lib/Netaudit/Db:
	Added POD

2.0.1 -- 2012-09-17
	* lib/Netaudit/SNMP:
	Having constant Mouse attributes were cumbersome. They are now 
	regular globals.  

2.0 -- 2012-09-12